# AVR_COTS_ITI

./: README.md
COTS/: CMakeLists.txt
COTS/0-STD_LIBS/inc/: STD_TYPES.h
COTS/1-common/inc/MDIO/: MDIO_REG.h
COTS/2-MCAL/MDIO/: CMakeLists.txt
COTS/2-MCAL/MDIO/inc/: MDIO.h  MDIO_CFG.h
COTS/2-MCAL/MDIO/src/: MDIO.c
COTS/2-MCAL/MEXIT/: CMakeLists.txt
COTS/2-MCAL/MEXIT/inc/: MEXIT.h  MEXIT_CFG.h
COTS/2-MCAL/MEXIT/src/: MEXIT.c  MEXIT_CFG.c
COTS/2-MCAL/MGIE/: CMakeLists.txt
COTS/2-MCAL/MGIE/inc/: MGIE.h
COTS/2-MCAL/MGIE/src/: MGIE.c
COTS/2-MCAL/MPORT/: CMakeLists.txt
COTS/2-MCAL/MPORT/inc/: MPORT.h  MPORT_CFG.h
COTS/2-MCAL/MPORT/src/: MPORT.c  MPORT_CFG.c
COTS/3-HAL/HCLCD/: CMakeLists.txt
COTS/3-HAL/HCLCD/inc/: HCLCD.h  HCLCD_CFG.h
COTS/3-HAL/HCLCD/src/: HCLCD.c  HCLCD_CFG.c
COTS/3-HAL/HKPAD/: CMakeLists.txt
COTS/3-HAL/HKPAD/inc/: HKPAD.h  HKPAD_CFG.h  HKPAD_PRIVATE.h
COTS/3-HAL/HKPAD/src/: HKPAD.c  HKPAD_CFG.c
COTS/3-HAL/HLED/: CMakeLists.txt
COTS/3-HAL/HLED/inc/: HLED.h  HLED_CFG.h
COTS/3-HAL/HLED/src/: HLED.c  HLED_CFG.c
COTS/3-HAL/HSEVENSEG/: CMakeLists.txt
COTS/3-HAL/HSEVENSEG/inc/: HSEVENSEG.h  HSEVENSEG_CFG.h
COTS/3-HAL/HSEVENSEG/src/: HSEVENSEG.c  HSEVENSEG_CFG.c
COTS/3-HAL/HSWITCH/: CMakeLists.txt
COTS/3-HAL/HSWITCH/inc/: HSWITCH.h  HSWITCH_CFG.h
COTS/3-HAL/HSWITCH/src/: HSWITCH.c  HSWITCH_CFG.c
COTS/4-APP/Assignment_1/Binary_Counter/: Binary_Counter.c  Lab2.pdsprj  Lab2.pdsprj.YOUSSEF.youss.workspace  Last Loaded Lab2.pdsbak
COTS/4-APP/Assignment_1/Control_Led/: Control_Led.c  Lab1.pdsprj  Lab1.pdsprj.YOUSSEF.youss.workspace  Last Loaded Lab1.pdsbak
COTS/4-APP/Assignment_2/Control_3_Leds/: Control_3_Leds.c  Lab2.pdsprj  Lab2.pdsprj.YOUSSEF.youss.workspace
COTS/4-APP/Assignment_3/TestLedSwitch/: Lab2.pdsprj  TestLedSwitch.c
COTS/4-APP/Assignment_4/TestSevenSeg/: Assignment_4.pdsprj  Assignment_4.pdsprj.YOUSSEF.youss.workspace  Backup Of Assignment_4.pdsbak  Last Loaded Assignment_4.pdsbak  TestSevenSeg.c
COTS/4-APP/Assignment_5/Test_HCLCD/: Test_CLCD.c
COTS/4-APP/Assignment_6/Alian_Invation/: Alian_Invation.c
COTS/4-APP/Assignment_7/Test_Kbad/: Test_Kbad.c
avrlabs/lab1/: Backup Of New Project.pdsbak  Last Loaded New Project.pdsbak  New Project.pdsprj  New Project.pdsprj.YOUSSEF.youss.workspace
avrlabs/lab1/Task1/: main.c  main.hex
avrlabs/lab1/Task2/: main.c  main.hex
avrlabs/lab1/Task3/: main.c  main.hex
